@@ -5,7 +5,7 @@
 
     <groupId>com.datadoghq</groupId>
     <artifactId>jmxfetch</artifactId>
-    <version>0.49.1-SNAPSHOT</version>
+    <version>0.51.0</version>
     <packaging>jar</packaging>
 
     <name>jmxfetch</name>
@@ -35,31 +35,36 @@
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
 
-        <commons-io.version>2.4</commons-io.version>
-        <apache-commons-lang3.version>3.5</apache-commons-lang3.version>
-        <java-dogstatsd-client.version>2.10.5</java-dogstatsd-client.version>
-        <jcommander.version>1.35</jcommander.version>
-        <slf4j.version>1.7.32</slf4j.version>
-        <jackson.version>2.12.3</jackson.version>
-        <snakeyaml.version>2.0</snakeyaml.version>
-        <maven-deploy-plugin.version>3.1.1</maven-deploy-plugin.version>
+        <buildnumber-maven-plugin.version>3.1.0</buildnumber-maven-plugin.version>
+        <maven-assembly-plugin.version>3.1.0</maven-assembly-plugin.version>
+        <maven-checkstyle-plugin.version>3.0.0</maven-checkstyle-plugin.version>
+        <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
+        <maven-deploy-plugin.version>3.1.2</maven-deploy-plugin.version>
+        <maven-gpg-plugin.version>3.2.4</maven-gpg-plugin.version>
+        <maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
+        <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
+        <maven-surefire-plugin.version>3.0.0-M6</maven-surefire-plugin.version>
+        <central-publishing-maven-plugin.version>0.8.0</central-publishing-maven-plugin.version>
         <!-- Note: using project checkstyle with AOSP style
         find the default google java checkstyle config here -
         <checkstyle.config.location>google_checks.xml</checkstyle.config.location>
          -->
         <checkstyle.config.location>style.xml</checkstyle.config.location>
 
-
-        <junit.version>4.13.1</junit.version>
+        <apache-commons-lang3.version>3.5</apache-commons-lang3.version>
+        <commons-io.version>2.4</commons-io.version>
+        <hamcrest.version>2.2</hamcrest.version>
+        <java-dogstatsd-client.version>2.10.5</java-dogstatsd-client.version>
+        <javax.management.j2ee-api.version>1.1.2</javax.management.j2ee-api.version>
+        <jcommander.version>1.35</jcommander.version>
+        <junit.version>4.13.2</junit.version>
+        <lombok.version>1.18.38</lombok.version>
         <mockito.version>2.28.2</mockito.version>
-
-        <maven-surefire-plugin.version>2.9</maven-surefire-plugin.version>
-        <buildnumber-maven-plugin.version>1.4</buildnumber-maven-plugin.version>
-        <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
-        <maven-assembly-plugin.version>3.1.0</maven-assembly-plugin.version>
+        <slf4j.version>1.7.32</slf4j.version>
+        <snakeyaml.version>2.0</snakeyaml.version>
+        <testcontainers.version>1.19.8</testcontainers.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
         <project.scm.id>github</project.scm.id>
     </properties>
 
@@ -75,40 +80,22 @@
                 </property>
             </activation>
 
-            <distributionManagement>
-                <snapshotRepository>
-                  <id>nexus</id>
-                  <!-- Use the localhost endpoint for testing -->
-                  <!-- <url>http://localhost:8081/repository/maven-snapshots/</url> -->
-                  <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-                </snapshotRepository>
-                <repository>
-                    <id>nexus</id>
-                    <!-- Use the localhost endpoint for testing -->
-                    <!-- <url>http://localhost:8081/repository/maven-releases/</url> -->
-                    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-                </repository>
-            </distributionManagement>
-
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>org.sonatype.plugins</groupId>
-                        <artifactId>nexus-staging-maven-plugin</artifactId>
-                        <version>1.6.13</version>
+                        <groupId>org.sonatype.central</groupId>
+                        <artifactId>central-publishing-maven-plugin</artifactId>
+                        <version>${central-publishing-maven-plugin.version}</version>
                         <extensions>true</extensions>
                         <configuration>
-                            <serverId>nexus</serverId>
-                            <!-- Use the localhost endpoint for testing -->
-                            <!-- <nexusUrl>http://localhost:8081/repository/maven-releases/</nexusUrl> -->
-                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                            <autoReleaseAfterClose>false</autoReleaseAfterClose>
+                            <publishingServerId>central</publishingServerId>
+                            <waitUntil>validated</waitUntil>
                         </configuration>
                     </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
-                        <version>3.0.1</version>
+                        <version>${maven-gpg-plugin.version}</version>
                         <executions>
                             <execution>
                                 <id>sign-artifacts</id>
@@ -145,6 +132,54 @@
                 </dependency>
             </dependencies>
         </profile>
+        <profile>
+            <id>jdk-21-and-later-profile</id>
+            <activation>
+                <jdk>[21.0,)</jdk>
+            </activation>
+            <properties>
+                <!-- Fix for JDK 21 which fails with "Source option 7 is no longer supported. Use 8 or later. -->
+                <jdk.version>1.8</jdk.version>
+                <maven.compiler.source>1.8</maven.compiler.source>
+                <maven.compiler.target>1.8</maven.compiler.target>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven-surefire-plugin.version}</version>
+                        <configuration>
+                            <!-- Fix for "java.lang.reflect.InaccessibleObjectException: Unable to make field private final java.util.Map java.util.Collections$UnmodifiableMap.m accessible: module java.base does not "opens java.util" to unnamed module @75eeccf5" -->
+                            <!-- Use ParallelGC for tests to avoid G1 GC which is the default in JDK 21 -->
+                            <argLine>
+                                --add-opens=java.base/java.util=ALL-UNNAMED
+                                -Djdk.attach.allowAttachSelf
+                                -XX:+UseParallelGC
+                            </argLine>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>${maven-compiler-plugin.version}</version>
+                        <configuration>
+                            <annotationProcessorPaths>
+                                <path>
+                                    <groupId>org.projectlombok</groupId>
+                                    <artifactId>lombok</artifactId>
+                                    <version>${lombok.version}</version>
+                                </path>
+                            </annotationProcessorPaths>
+                            <compilerArgs>
+                                <arg>-Xlint:deprecation</arg>
+                                <arg>-Xlint:unchecked</arg>
+                            </compilerArgs>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 
     <dependencies>
@@ -159,14 +194,9 @@
             <version>${java-dogstatsd-client.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.fasterxml.jackson.jr</groupId>
-            <artifactId>jackson-jr-objects</artifactId>
-            <version>${jackson.version}</version>
-        </dependency>
-        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.22</version>
+            <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -186,6 +216,13 @@
             <version>${snakeyaml.version}</version>
         </dependency>
         <dependency>
+            <groupId>javax.management.j2ee</groupId>
+            <artifactId>javax.management.j2ee-api</artifactId>
+            <version>${javax.management.j2ee-api.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
@@ -200,13 +237,25 @@
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>testcontainers</artifactId>
-            <version>1.19.3</version>
+            <version>${testcontainers.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest</artifactId>
+            <version>${hamcrest.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-library</artifactId>
-            <version>1.3</version>
+            <version>${hamcrest.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.code-intelligence</groupId>
+            <artifactId>jazzer-junit</artifactId>
+            <version>0.24.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -225,14 +274,27 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler-plugin.version}</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>-Xlint:deprecation</arg>
+                        <arg>-Xlint:unchecked</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
                 <configuration>
                     <!-- allowAttachSelf required for tests in jdk9+ ref https://bugs.openjdk.org/browse/JDK-8180425 -->
                     <!-- rmi.server.hostname required for tests in some MacOS configurations -->
-                    <argLine>-Djdk.attach.allowAttachSelf=true -Djava.rmi.server.hostname=localhost</argLine>
+                    <argLine>
+                        -Djdk.attach.allowAttachSelf
+                        -Djava.rmi.server.hostname=localhost
+                    </argLine>
                     <useFile>false</useFile>
-                    <trimStackTrace>false</trimStackTrace> <!-- can remove once surefire 3.0 is used. ref: https://issues.apache.org/jira/browse/SUREFIRE-1432 -->
                 </configuration>
             </plugin>
             <plugin>
@@ -277,7 +339,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.2.0</version>
+                <version>${maven-javadoc-plugin.version}</version>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -318,7 +380,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>3.0.0</version>
+                <version>${maven-checkstyle-plugin.version}</version>
                 <executions>
                     <execution>
                         <id>checkstyle</id>
@@ -354,7 +416,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>3.0.0</version>
+                <version>${maven-checkstyle-plugin.version}</version>
                 <reportSets>
                     <reportSet>
                         <reports>
